--- a/data/fa/resume.yaml
+++ b/data/fa/resume.yaml
@@ -27,48 +27,53 @@ experience:
     company: JIBit
     period: اوت ۲۰۱۹ - اکنون
     description: >
-      جی‌بیت یک شرکت فین‌تک است که با هدف حذف پیچیدگی‌های مالی از طریق ساخت زیرساخت‌های فین‌تک، خدمات مالی سازمانی و راهکارهای پرداخت هوشمند برای استارتاپ‌ها فعالیت می‌کند.
+      جی‌بیت یک شرکت فین‌تک است که زیرساخت‌های مالی، خدمات مالی سازمانی و سیستم‌های پرداخت هوشمند ارائه می‌دهد.
     responsibilities:
-      - هدایت طراحی و راه‌اندازی فریم‌ورک فرانت‌اند اختصاصی مبتنی بر Angular که منجر به کاهش ۴۰ درصدی زمان اجرای پروژه‌ها و بهبود ثبات کد در تمامی پنل‌ها شد.
-      - مدیریت مهاجرت پنل‌های وب قدیمی به فریم‌ورک داخلی یکپارچه، با اطمینان از انتقال بدون وقفه.
-      - مدیریت کامل چرخه حیات کارکنان تیم فرانت‌اند، شامل استخدام، آنبوردینگ، مدیریت عملکرد و آف‌بوردینگ.
-      - توسعه و پیاده‌سازی شاخص‌های رشد تیم با همکاری منابع انسانی.
-      - ارزیابی و تحلیل APIها و فناوری‌های جدید فرانت‌اند برای تعیین مناسب بودن آن‌ها جهت استفاده در تیم.
-      - همکاری با مالکان محصول برای تعریف نیازمندی‌های فرانت‌اند و تعیین اولویت‌ها.
-  - title: Tech Lead
+      - مدیریت مهاجرت استراتژیک پروژه‌های قدیمی React به معماری مدرن Angular، با تضمین پایداری کامل و بهبود قابلیت نگهداری.
+      - هدایت تکامل فنی اکوسیستم فرانت‌ند از مخازن پراکنده و Git Submodules به یک مونو-ریپو (Nx) یکپارچه، با حفظ کامل تاریخچه گیت.
+      - طراحی و مهندسی فریم‌ورک فرانت‌اند اختصاصی و سیستم طراحی (Design System)، کاهش ۴۰ درصدی زمان تحویل پروژه‌ها و تضمین ثبات ۱۰۰ درصدی UI/UX.
+      - تحول در گردش کار تیم با معرفی متدولوژی‌های چابک (Agile) و سیستم‌های مدیریت وظایف (Jira)، جهت حذف گلوگاه‌های ارتباطی.
+      - مدیریت مهاجرت زیرساخت تست از Jest به Vitest و پیاده‌سازی Playwright برای تست‌های E2E.
+      - همکاری با تیم DevOps برای بهینه‌سازی خط لوله‌های استقرار مبتنی بر Docker و جریان‌های کاری CI/CD برای انتشار سریع.
+      - مدیریت کامل چرخه حیات مهندسی در بخش فرانت‌اند، شامل استخدام فنی، مدیریت عملکرد و فرهنگ تیمی.
+  - title: مشاور فنی / راهبر فنی
     company: Raymandan Taly Parseh
     period: ژوئن ۲۰۲۰ - مارس ۲۰۲۲
     description: >
       رایمندان تالی پارسه یک شرکت مشاوره مدیریت است.
     responsibilities:
-      - رهبری توسعه نرم‌افزار برای پروژه‌های مشتریان، شامل لندینگ پیج‌ها، پورتال‌ها و پنل‌ها.
-      - پیکربندی و نگهداری سرورهای وب و ایمیل با استفاده از Ubuntu، Nginx، MariaDB، Postfix و Dovecot.
-      - پیاده‌سازی راهکارهای پخش زنده دوربین روی وب با استفاده از RTSP و FFmpeg.
-      - بهینه‌سازی پیکربندی سرورها و انجام ممیزی‌های امنیتی.
-      - توسعه و پیاده‌سازی راهکارهای پشتیبان‌گیری و بازیابی فاجعه.
+      - هدایت توسعه لندینگ‌پیج‌های با نرخ تبدیل بالا و پورتال‌های مشتریان، با تضمین کارایی و مقیاس‌پذیری.
+      - معماری و مدیریت زیرساخت‌های امن لینوکسی (Ubuntu, Nginx, MariaDB) برای سرویس‌های وب و ایمیل.
+      - طراحی راهکارهای پخش زنده ویدیو (RTSP/FFmpeg) برای مانیتورینگ دوربین‌های داخلی تحت وب.
+      - ایفای نقش مشاور فنی مدیریت، نظارت بر پاسخگویی به حوادث و بازیابی سرورها در زمان حملات شبکه و قطعی‌های ISP.
   - title: Lead Frontend Developer
-    company: Polito
+    company: Poolito
     period: نوامبر ۲۰۱۸ - اوت ۲۰۱۹
     description: >
       پولیتو یک استارتاپ فین‌تک بود که راهکارهای پرداخت نوآورانه ارائه می‌داد.
     responsibilities:
-      - رهبری تیم فرانت‌اند در توسعه پنل‌های ادمین و مشتری با استفاده از Angular 7، Angular Material و gRPC.
-      - توسعه لندینگ پیج‌های واکنش‌گرا با استفاده از Bootstrap، Scrollify، jQuery و Popper.
-  - title: Full Stack Developer
+      - رهبری تیم مهندسی فرانت‌ند در توسعه داشبوردهای مدیریتی و مشتری با کارایی بالا برای خدمات مالی.
+      - معماری و پیاده‌سازی لایه‌های پیچیده ارتباط داده با استفاده از Angular و gRPC جهت به‌روزرسانی‌های بلادرنگ و کارآمد.
+      - هدایت توسعه لندینگ‌پیج‌های واکنش‌گرا و تعاملی با استفاده از فریم‌ورک‌های مدرن CSS و JavaScript.
+  - title: Lead Frontend Developer (ارتقا یافته از Junior)
     company: ModernPal
     period: اکتبر ۲۰۱۵ - نوامبر ۲۰۱۸
     responsibilities:
-      - توسعه فرانت‌اند برای اپلیکیشن HealthyPal، یک پلتفرم سلامت که کاربران را به پزشکان و مربیان متصل می‌کند.
-      - توسعه فرانت‌اند و بک‌اند برای اپلیکیشن FeePal، یک پلتفرم تبادل آنلاین نوآورانه.
-      - هدایت مهاجرت پروژه‌ها از AngularJS به Angular 2+ و از PHP Laravel به Java Spring Boot.
-  - title: System Administrator & Web Developer
+      - پیشرفت سریع از سطح Junior به Lead Frontend Developer و نظارت بر جهت‌گیری فنی پلتفرم‌های اصلی سلامت و مالی.
+      - مدیریت مهاجرت در مقیاس بزرگ از AngularJS به Angular 2+، مدرن‌سازی معماری فرانت‌ند و بهبود کارایی.
+      - توسعه ویژگی‌های فول‌استک برای یک پلتفرم تبادل ارز با استفاده از Angular و Laravel.
+      - تسهیل انتقال بک‌ند از PHP Laravel به Java Spring Boot و کسب تجربه بین‌رشته‌ای در Java و Gradle.
+      - همکاری مستقیم با CTO جهت همسوسازی استراتژی‌های فرانت‌ند با اهداف تجاری و نقشه‌های راه فنی.
+  - title: مدیر سیستم و توسعه‌دهنده وب
     company: Haseb System Consultancy Co
     period: سپتامبر ۲۰۱۴ - نوامبر ۲۰۱۵
     description: >
       حاسب سیستم یک شرکت مشاوره مدیریت است.
     responsibilities:
-      - مدیریت محیط‌های Windows Server و Domain Controller، شامل نصب، نگهداری و مدیریت سرور TFS.
-      - هدایت توسعه پنل‌های مدیریت پروژه داخلی و سیستم‌های تایم‌شیت پرسنل با استفاده از PHP و MySQL.
+      - بازسازی کامل زیرساخت IT شرکت، رفع مشکلات بحرانی Domain Controller و DNS، و ارتقای سخت‌افزار شبکه برای پشتیبانی از بیش از ۳۰ ایستگاه کاری.
+      - مدیریت محیط‌های Windows Server و TFS (Team Foundation Server)، با تضمین در دسترس بودن و امنیت بالا.
+      - توسعه پورتال داخلی جامع با PHP/MySQL برای ردیابی تایم‌شیت پرسنل، مدیریت تنخواه و امور حقوق و دستمزد.
+      - طراحی و پیاده‌سازی یک پلتفرم سلامت چندمنظوره شامل دایرکتوری پزشکان، تالار گفتگو و سیستم بررسی علائم بیماری.
   - title: Assistant
     company: Rayzan International Conference Center
     period: ژانویه ۲۰۱۴ - ژانویه ۲۰۱۵
@@ -79,11 +84,13 @@ experience:
     company: IRIB
     period: سپتامبر ۲۰۰۷ - ژوئن ۲۰۰۸
     description: >
-      سازمان صدا و سیمای جمهوری اسلامی ایران.
+      سازمان صدا و سیمای جمهوری اسلامی ایران (IRIB).
     responsibilities:
-      - توسعه‌دهنده وب
-      - پشتیبانی IT برای نگهداری کامپیوترهای مبتنی بر ویندوز.
+      - توسعه ابزارهای داخلی تحت وب و ارائه پشتیبانی IT برای محیط‌های مبتنی بر ویندوز.
 certifications:
+  - title: مدرک زبان آلمانی (B1)
+    institution: مؤسسه آموزش زبان آلمانی (DSIT)
+    year: ۲۰۱۳
   - title: CCNA Routing and Switching 200-120
     provider: Cisco
     institution: Kahkeshan
