fix resume missing provider

--- a/data/de/resume.yaml
+++ b/data/de/resume.yaml
@@ -89,6 +89,7 @@ experience:
       - Entwicklung webbasierter interner Tools und IT-Support für Windows-basierte Umgebungen.
 certifications:
   - title: Deutsch Zertifikat (B1)
+    provider: Goethe-Institut
     institution: Deutsches Sprachinstitut Teheran (DSIT)
     year: 2013
   - title: CCNA Routing and Switching 200-120
