--- a/data/en/resume.yaml
+++ b/data/en/resume.yaml
@@ -89,6 +89,7 @@ experience:
       - Developed web-based internal tools and provided IT support for Windows-based environments.
 certifications:
   - title: German Language (B1)
+    provider: Goethe-Institut
     institution: German Language Institute (DSIT)
     year: 2013
   - title: CCNA Routing and Switching 200-120
